--- a/frontend/pages/adventures/index.html
+++ b/frontend/pages/adventures/index.html
@@ -126,13 +126,13 @@
 
             //Fetches the City from URL query param (here : window.location.search is an in-built browser property that returns the query param from URL, example: http://localhost:8081/?city=bengaluru => window.location.search would return "?city=bengaluru")
             let city = await getCityFromURL(window.location.search);
-
+            console.log(city);
             //Fetches the adventures for the particular city
             adventures = await fetchAdventures(city);
 
             //Applies filters on the adventures list
             let filteredAdventures = filterFunction(adventures, filters);
-
+            //console.log(filteredAdventures)
             //Updates the filtered adventures list to the DOM
             addAdventureToDOM(filteredAdventures)
 
